--- a/css/modal.css
+++ b/css/modal.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 500vh;
     justify-content: center;
-    z-index: 10;
+    z-index: 10000000000000000000;
 }
 .modal-modal.show{display: block;}
 
@@ -67,9 +67,11 @@
 .modal-modal > .overflow-modal > .container-modal > div:first-child > .close-modal {
     float: right;
     cursor: pointer;
-    margin: 10px 10px auto auto;
+    margin: 15px 15px auto auto;
+    font-size: 1.5em;
+    opacity: .7;
 }
 .modal-modal > .overflow-modal > .container-modal > div:first-child > .close-modal:hover {
     transition: .6s;
-    opacity: .5;
+    opacity: 1;
 }
